# MyOpenClawAgents

./: .$statemachine.drawio.bkp  .$statemachine.v2.drawio.bkp  .gitignore  ACPX_AUTO_TESTER_USAGE.md  AGENTS.md  CLAUDE.md  TEMPORAL_DEV_部署教程.md  ifp_users.json  statemachine.drawio  statemachine.md  statemachine.v2.drawio  statemachine.v2.md  target-repo.gitignore  工作内容文档.md  说明文档.md
.claude/: settings.json  settings.local.json
.claude/hooks/: require-workspace-review.sh
deploy/: install-temporal-worker.sh
docs/: local-gitlab-openclaw-smoke.md  环境precheck清单填写指南.md
docs/blue-zone-infrastructure/: 2026-06-29-blue-zone-base-services.md  2026-06-29-blue-zone-infra-brief.md  2026-06-29-blue-zone-infra-plan.md
examples/: campaign-ifp_ui_testing.json
workspace-UiAutoTester/: AGENTS.md  SOUL.md  USER.md
workspace-UiAutoTester/config/: README.md  gitlab.env
workspace-acpx_auto_tester/: AGENTS.md  CLAUDE.md  SOUL.md  USER.md
workspace-acpx_auto_tester/.claude/: settings.json  settings.local.json
workspace-acpx_auto_tester/config/: README.md  gitlab.env  ui_accounts.env
workspace-acpx_auto_tester/docs/: ACPX_AUTO_TESTER_USAGE.md  ifp_users.json  target-repo.gitignore  环境precheck清单填写指南.md
workspace-acpx_auto_tester/temporal/: README.md  __init__.py  client.py  pyproject.toml  requirements.txt  worker.py
workspace-acpx_auto_tester/temporal/activities/: __init__.py  leaf.py  orchestrator.py  subprocess.py
workspace-acpx_auto_tester/temporal/schedules/: __init__.py  campaign_schedule.py
workspace-acpx_auto_tester/temporal/shared/: __init__.py  env.py  errors.py  model_tiers.py  types.py  ui_accounts.py
workspace-acpx_auto_tester/temporal/workflows/: __init__.py  campaign.py  issue_attempt.py
workspace-acpx_auto_tester_pts/: AGENTS.md  SOUL.md  USER.md
workspace-acpx_auto_tester_pts/config/: README.md
workspace-cctester/: AGENTS.md  SOUL.md  USER.md
workspace-cctester/config/: README.md  ui_accounts.env
workspace-emcp/: AGENTS.md  CLAUDE.md  USER.md
workspace-emcp/.claude/: .review-done-sha
workspace-git_issuer/: AGENTS.md  CLAUDE.md  SOUL.md  USER.md
workspace-git_issuer/config/: README.md  gitlab.env.example  project_routing.env
workspace-req_dispatcher/: AGENTS.md  CLAUDE.md  SOUL.md  USER.md
workspace-req_executor/: AGENTS.md  CLAUDE.md  SOUL.md  USER.md
(+249 files in other folders)
